# PDFColorPages

./: README.md  pyproject.toml
src/pdfcolorpages/: detector.py
src/pdfcolorpages.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_detector.py
